# api-auditoria

./: .dockerignore  .env.example  .gitignore  Dockerfile  docker-compose-prod.yml  docker-compose.yml  main.py  pyproject.toml
app/: config.py  main.py
app/core/: dependencies.py  exceptions.py  schemas.py
app/domains/cirugias/: models.py  repository.py  router.py  schemas.py  service.py
app/domains/cirugias/queries/: get_detalle_cirugia_v2.sql
app/domains/ejemplo/: models.py  router.py  schemas.py  service.py
app/domains/emergencias/: models.py  repository.py  router.py  schemas.py  service.py
app/domains/urgencias/: models.py  repository.py  router.py  schemas.py  service.py
app/domains/urgencias/queries/: get_detalle_atencion.sql
